2013-02-26  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-insert-directory): Add
	"2>/dev/null" to the ls command, in case "en_US.utf8" is not
	defined.  POSIX environments fall back to the "C" locale then and
	emit a warning, which shall be suppressed.

2013-02-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode): Tweak logic.
	(easy-mmode-set-keymap-parents): Use make-composed-keymap.

2013-02-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-file): Use let.

2013-02-25  Juri Linkov  <juri@jurta.org>

	* replace.el (read-regexp): Let-bind `default' to the first
	element of `defaults' if it's a list, otherwise it should be
	a string or nil.  Let-bind `suggestions' to `defaults' if it's
	a list, otherwise make a list with the string value.  Doc fix.
	(Bug#13805)

2013-02-25  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/bytecomp.el (byte-recompile-directory): Reject files
	that match "\`\.#", to avoid compiling lock files, even if they
	are readable (as they are on MS-Windows).

2013-02-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (basic-save-buffer): Remove redundant directory-creation.

2013-02-24  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-ext.el (math-to-radians-2, math-from-radians-2):
	Add option to force `pi' to remain symbolic.
	* calc/calcalg2.el (calcFunc-sin, calcFunc-cos, calcFunc-tan)
	(calcFunc-cot, calcFunc-csc, calcFunc-sec, calcFunc-arcsin)
	(calcFunc-arccos, calcFunc-arctan): Use symbolic `pi' in the
	derivatives, when necessary.

2013-02-23  Peter Kleiweg  <p.c.j.kleiweg@rug.nl>

	* progmodes/ps-mode.el (ps-mode-version): Bump to 1.1i.
	(ps-mode-octal-region): Use string-make-unibyte.

2013-02-23  Glenn Morris  <rgm@gnu.org>

	* emulation/viper-cmd.el (viper-submit-report):
	* progmodes/ps-mode.el (ps-mode-maintainer-address):
	* progmodes/vera-mode.el (vera-mode-help-address):